--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "projeto final do modulo 4",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "start": "node ./src/server.js",
     "database": "node ./src/database/create-and-populate.js",
     "delete-db": "rm ./src/database/database.db",
@@ -22,10 +22,13 @@
   },
   "homepage": "https://github.com/Josirocha/moko_tattoo_studio#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "sqlite3": "^5.0.10"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "jest": "^28.1.3",
+    "nodemon": "^2.0.19",
+    "supertest": "^6.2.4"
   }
 }
